<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        style="@style/linearParent"

        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Mini GRT Geo Location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textview5"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:hint="@string/textview5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/member_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/textview6"
                   android:layout_marginStart="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:text="@string/textview6"
                   android:textStyle="bold"></TextView>
               <RadioGroup
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginStart="5dp"
                   android:layout_marginBottom="10dp"
                   android:orientation="horizontal">

                   <RadioButton
                       android:id="@+id/radioButton4"
                       android:layout_width="80dp"
                       android:layout_height="wrap_content"
                       android:text="@string/radio4" />

                   <RadioButton
                       android:id="@+id/radioButton5"
                       android:layout_width="85dp"
                       android:layout_height="wrap_content"
                       android:text="@string/radio5" />

               </RadioGroup>
           </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview7"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:layout_height="wrap_content"
        android:hint="@string/textview7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remarks_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textview8"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:hint="@string/textview8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview9"
                android:text="@string/textview9"></TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/img2"
                android:src="@drawable/map"></ImageView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview10"
                android:text="@string/textview10"></TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/img3"
                android:src="@drawable/house"></ImageView>


        </LinearLayout>

    </LinearLayout>
</ScrollView>
</androidx.cardview.widget.CardView>