<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview1"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/textview1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview2"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/textview2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textview3"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/textview3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RPassword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/btn_ok"
                style="@style/loginButton"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:text="Submit"/>

            <Button
                android:id="@+id/btn_cancel"
                style="@style/loginButton"
                android:layout_toLeftOf="@+id/btn_ok"
                android:text="CANCEL"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/reg"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>