<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/insti_head"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/institution"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mtext1"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mpin1_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mtext2"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mpin2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mtext4"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mpin4_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview9"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/textview4"
                android:textStyle="bold"></TextView>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio2" />
                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txt1"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt1"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin1_edt_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight=".5"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt2"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin2_edt_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight=".5"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt4"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin4_edt_text"
                        android:layout_width="match_parent"
                        android:layout_weight=".5"
                        android:layout_height="50dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt5"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin5_edt_text"
                        android:layout_width="match_parent"
                        android:layout_weight=".5"
                        android:layout_height="50dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt6"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin6_edt_text"
                        android:layout_width="match_parent"
                        android:layout_weight=".5"
                        android:layout_height="50dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mtxt7"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mpin7_edt_text"
                        android:layout_width="match_parent"
                        android:layout_weight=".5"
                        android:layout_height="50dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/btn_ok"
                style="@style/loginButton"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="OK"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>