<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">


    <LinearLayout
        style="@style/linearParent"

        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mpin"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mtext1"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mpin1_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mtext2"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mpin2_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mtext4"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mpin4_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mtext3"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mpin3_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Rmpin"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rmtext1"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rmpin1_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rmtext2"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rmpin2_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rmtext4"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rmpin4_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rmtext3"
                        style="@style/TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rmpin3_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            android:id="@+id/signup"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>